# MathLib

./: .gitignore  CMakeLists.txt  run.bat
matrix/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  testMat.cpp
test/: mainTest.cpp
vector/: CMakeLists.txt  Vector.cpp  Vector.hpp
